{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 286,
  "lineage": "50b27db4-6f54-eebc-50ac-ea429b2fdda3",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "datacenter_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "nomad_consul_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "vault_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/frontendIPConfigurations/internal",
                "load_balancer_rules": [
                  "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/loadBalancingRules/vault-rule"
                ],
                "name": "internal",
                "private_ip_address": "10.0.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault/subnets/snet-vault"
              }
            ],
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal",
            "location": "westeurope",
            "name": "lb-vault-internal",
            "private_ip_address": "10.0.1.10",
            "private_ip_addresses": [
              "10.0.1.10"
            ],
            "resource_group_name": "rg-vault",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "Phase": "1-infra-only",
              "Project": "hashi-infra"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.vault_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "datacenter_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "nomad_consul_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "vault_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/backendAddressPools/backend-vault",
            "load_balancing_rules": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/loadBalancingRules/vault-rule"
            ],
            "loadbalancer_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal",
            "name": "backend-vault"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.vault_lb",
            "azurerm_resource_group.vault_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "datacenter_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "nomad_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "vault_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/probes/tcp-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/loadBalancingRules/vault-rule"
            ],
            "loadbalancer_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal",
            "name": "tcp-probe",
            "number_of_probes": 2,
            "port": 8200,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.vault_lb",
            "azurerm_resource_group.vault_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "datacenter_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "nomad_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "vault_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/backendAddressPools/backend-vault"
            ],
            "backend_port": 8200,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/frontendIPConfigurations/internal",
            "frontend_ip_configuration_name": "internal",
            "frontend_port": 8200,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/loadBalancingRules/vault-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal",
            "name": "vault-rule",
            "probe_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/loadBalancers/lb-vault-internal/probes/tcp-probe",
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.vault_lb",
            "azurerm_lb_backend_address_pool.vault_backend",
            "azurerm_lb_probe.vault_probe",
            "azurerm_resource_group.vault_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "clients_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/networkSecurityGroups/nsg-clients",
            "location": "westeurope",
            "name": "nsg-clients",
            "resource_group_name": "rg-clients",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "4646",
                  "4647",
                  "4648"
                ],
                "direction": "Outbound",
                "name": "Hashi-ClientToNomad",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "8300",
                  "8301",
                  "8302",
                  "8500",
                  "8501",
                  "8600"
                ],
                "direction": "Outbound",
                "name": "Hashi-ClientToConsul",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "88.74.173.52",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "LB-Ingress",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8200",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Hashi-ClientToVault",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "Phase": "1-infra-only",
              "Project": "hashi-infra"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nomad_consul_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/networkSecurityGroups/nsg-nomad-consul",
            "location": "westeurope",
            "name": "nsg-nomad-consul",
            "resource_group_name": "rg-nomad-consul",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "88.74.173.52",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "4646-4648",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Nomad-Server",
                "priority": 1004,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8301-8302",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Consul-Server",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8500-8501",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Consul-Client",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "Phase": "1-infra-only",
              "Project": "hashi-infra"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.nomad_consul_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vault_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/networkSecurityGroups/nsg-vault",
            "location": "westeurope",
            "name": "nsg-vault",
            "resource_group_name": "rg-vault",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "88.74.173.52",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8200",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Vault-API",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "AzureKeyVault",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "KeyVault-Access",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "Phase": "1-infra-only",
              "Project": "hashi-infra"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.vault_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "datacenter_lb_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "datacenter_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/virtualNetworks/vnet-clients/subnets/snet-dc-0",
            "name": "snet-dc-0",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-clients",
            "virtual_network_name": "vnet-clients"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rg",
            "azurerm_virtual_network.clients_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "nomad_consul_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/virtualNetworks/vnet-nomad-consul/subnets/snet-nomad-consul",
            "name": "snet-nomad-consul",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-nomad-consul",
            "virtual_network_name": "vnet-nomad-consul"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.nomad_consul_rg",
            "azurerm_virtual_network.nomad_consul_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "vault_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault/subnets/snet-vault",
            "name": "snet-vault",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-vault",
            "virtual_network_name": "vnet-vault"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.vault_rg",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "datacenter_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/virtualNetworks/vnet-clients/subnets/snet-dc-0",
            "network_security_group_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/networkSecurityGroups/nsg-clients",
            "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/virtualNetworks/vnet-clients/subnets/snet-dc-0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.clients_nsg",
            "azurerm_resource_group.clients_rg",
            "azurerm_subnet.datacenter_subnet",
            "azurerm_virtual_network.clients_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nomad_consul_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/virtualNetworks/vnet-nomad-consul/subnets/snet-nomad-consul",
            "network_security_group_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/networkSecurityGroups/nsg-nomad-consul",
            "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/virtualNetworks/vnet-nomad-consul/subnets/snet-nomad-consul"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nomad_consul_nsg",
            "azurerm_resource_group.nomad_consul_rg",
            "azurerm_subnet.nomad_consul_subnet",
            "azurerm_virtual_network.nomad_consul_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vault_subnet_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault/subnets/snet-vault",
            "network_security_group_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/networkSecurityGroups/nsg-vault",
            "subnet_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault/subnets/snet-vault"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.vault_nsg",
            "azurerm_resource_group.vault_rg",
            "azurerm_subnet.vault_subnet",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "clients_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c5f6acb7-ff74-4976-97e5-bd930b87cac8",
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/virtualNetworks/vnet-clients",
            "location": "westeurope",
            "name": "vnet-clients",
            "resource_group_name": "rg-clients",
            "subnet": [
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/virtualNetworks/vnet-clients/subnets/snet-dc-0",
                "name": "snet-dc-0",
                "security_group": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/networkSecurityGroups/nsg-clients"
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "Phase": "1-infra-only",
              "Project": "hashi-infra"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "nomad_consul_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "48b95fb2-8507-454c-bc3a-74daea0b9e07",
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/virtualNetworks/vnet-nomad-consul",
            "location": "westeurope",
            "name": "vnet-nomad-consul",
            "resource_group_name": "rg-nomad-consul",
            "subnet": [
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/virtualNetworks/vnet-nomad-consul/subnets/snet-nomad-consul",
                "name": "snet-nomad-consul",
                "security_group": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/networkSecurityGroups/nsg-nomad-consul"
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "Phase": "1-infra-only",
              "Project": "hashi-infra"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.nomad_consul_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vault_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b5ac8f6c-b27c-4c61-8c04-5c40b1de7c79",
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault",
            "location": "westeurope",
            "name": "vnet-vault",
            "resource_group_name": "rg-vault",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault/subnets/snet-vault",
                "name": "snet-vault",
                "security_group": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/networkSecurityGroups/nsg-vault"
              }
            ],
            "tags": {
              "CostCenter": "SpikeReply",
              "Environment": "dev",
              "Phase": "1-infra-only",
              "Project": "hashi-infra"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.vault_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "clients_to_nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/virtualNetworks/vnet-clients/virtualNetworkPeerings/peer-clients-to-nomad",
            "name": "peer-clients-to-nomad",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/virtualNetworks/vnet-nomad-consul",
            "resource_group_name": "rg-clients",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-clients"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rg",
            "azurerm_resource_group.nomad_consul_rg",
            "azurerm_virtual_network.clients_vnet",
            "azurerm_virtual_network.nomad_consul_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "clients_to_vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/virtualNetworks/vnet-clients/virtualNetworkPeerings/peer-clients-to-vault",
            "name": "peer-clients-to-vault",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault",
            "resource_group_name": "rg-clients",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-clients"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rg",
            "azurerm_resource_group.vault_rg",
            "azurerm_virtual_network.clients_vnet",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "nomad_to_clients",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/virtualNetworks/vnet-nomad-consul/virtualNetworkPeerings/peer-nomad-to-clients",
            "name": "peer-nomad-to-clients",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/virtualNetworks/vnet-clients",
            "resource_group_name": "rg-nomad-consul",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-nomad-consul"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rg",
            "azurerm_resource_group.nomad_consul_rg",
            "azurerm_virtual_network.clients_vnet",
            "azurerm_virtual_network.nomad_consul_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "nomad_to_vault",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/virtualNetworks/vnet-nomad-consul/virtualNetworkPeerings/peer-nomad-to-vault",
            "name": "peer-nomad-to-vault",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault",
            "resource_group_name": "rg-nomad-consul",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-nomad-consul"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.nomad_consul_rg",
            "azurerm_resource_group.vault_rg",
            "azurerm_virtual_network.nomad_consul_vnet",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vault_to_clients",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault/virtualNetworkPeerings/peer-vault-to-clients",
            "name": "peer-vault-to-clients",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-clients/providers/Microsoft.Network/virtualNetworks/vnet-clients",
            "resource_group_name": "rg-vault",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-vault"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.clients_rg",
            "azurerm_resource_group.vault_rg",
            "azurerm_virtual_network.clients_vnet",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vault_to_nomad",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-vault/providers/Microsoft.Network/virtualNetworks/vnet-vault/virtualNetworkPeerings/peer-vault-to-nomad",
            "name": "peer-vault-to-nomad",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/f8cea8db-c84b-44eb-aa67-f8c938abbfda/resourceGroups/rg-nomad-consul/providers/Microsoft.Network/virtualNetworks/vnet-nomad-consul",
            "resource_group_name": "rg-vault",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-vault"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.nomad_consul_rg",
            "azurerm_resource_group.vault_rg",
            "azurerm_virtual_network.nomad_consul_vnet",
            "azurerm_virtual_network.vault_vnet"
          ]
        }
      ]
    }
  ]
}